Geolocalization GPS and GET method with headers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rezadiscount.rezadiscount">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".reza.discount.activities.ItemResearch"
+            android:name=".reza.discount.activities.BusinessResults"
             android:label="@string/title_activity_item_list_view"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".reza.discount.activities.BusinessProfile" />
@@ -45,8 +37,15 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".reza.discount.activities.MapBusiness"
-            android:label="@string/title_activity_map_business"></activity>
+            android:name=".reza.discount.activities.BusinessLocation"
+            android:label="@string/title_activity_map_business" />
+        <activity android:name=".reza.discount.activities.BusinessFilterResearch"></activity>
     </application>
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
 </manifest>
