--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rezadiscount.rezadiscount" >
+    package="com.rezadiscount.rezadiscount">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,12 +11,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".reza.discount.activities.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+        android:theme="@style/AppTheme">
         <activity
             android:name=".reza.discount.activities.BusinessResults"
             android:label="@string/title_activity_item_list_view"
@@ -38,15 +33,15 @@
             android:name=".reza.discount.activities.BusinessLocation"
             android:label="@string/title_activity_map_business" />
         <activity android:name=".reza.discount.activities.BusinessFilterResearch" />
-        <activity android:name=".reza.discount.activities.SignInUp" >
+        <activity android:name=".reza.discount.activities.SignInUp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".reza.discount.activities.SubscribeActivity" >
-        </activity>
+        <activity android:name=".reza.discount.activities.SubscribeActivity"></activity>
+        <activity android:name=".reza.discount.components.BaseDrawerActivity"></activity>
     </application>
 
 </manifest>
