--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:8.3.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
 }
