--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,9 @@
             android:name=".reza.discount.activities.FindActivity"
             android:label="@string/title_activity_find" />
         <activity android:name=".reza.discount.activities.SettingsActivity" />
+        <activity
+            android:name=".reza.discount.activities.PasswordActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
