--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/pomegranate_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar">
         <meta-data
@@ -35,7 +35,7 @@
         <activity android:name=".reza.discount.activities.BusinessLocation" />
         <activity android:name=".reza.discount.components.BaseDrawerActivity" />
         <activity
-            android:name=".reza.discount.activities.SignInUp"
+            android:name=".reza.discount.activities.SignInActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".reza.discount.activities.SubscribeActivity"
+            android:name=".reza.discount.activities.SignUpActivity"
             android:theme="@style/AppTheme" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -110,7 +110,7 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".reza.discount.activities.AgendaActivity"
-            android:label="@string/title_activity_agenda"></activity>
+            android:label="@string/title_activity_agenda" />
     </application>
 
 </manifest>
