--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <application
         android:name="com.appology.grenadeal.Grenadeal"
         android:allowBackup="true"
+        android:fullBackupContent="@xml/mybackupscheme"
         android:icon="@drawable/pomegranate_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar">
